2019-03-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-anchors.el: converted to utf-8.

	* eev-audiovideo.el: converted to utf-8.

	* eev-blinks.el: converted to utf-8.

	* eev-brxxx.el: converted to utf-8.

	* eev-code.el: converted to utf-8.

	* eev-edit.el: converted to utf-8.

	* eev-elinks.el: converted to utf-8.

	* eev-env.el: converted to utf-8.

	* eev-eval.el: converted to utf-8.

	* eev-intro.el: converted to utf-8.

	* eev-mode.el: converted to utf-8.

	* eev-pdflike.el: converted to utf-8.

	* eev-plinks.el: converted to utf-8.

	* eev-prepared.el: converted to utf-8.

	* eev-tlinks.el: converted to utf-8.

	* eev-wrap.el: converted to utf-8.

	* eev-edit.el: moved all keybindings to eev-mode.el.

	* eev-tlinks.el (find-eev-update-links): marked as obsolete.

	* eev-intro.el (find-intro-dual-define): new function.

2019-02-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (at-nth-window): commented out.
	(ee-with-pager-cat): renamed `with-pager-cat' to
	`ee-with-pager-cat'.

2019-02-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-escripts-intro): added several new sections.

	* eev-code.el: better comments.

	* eev-elinks.el: better comments.

2019-02-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-quick-intro, find-eev-intro)
	(find-prepared-intro, find-escripts-intro, find-rcirc-intro):
	small changes.

2019-02-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eev-install-intro): small changes.
	(find-eev-quick-intro): small changes.

	* eev-elinks.el (ee-info-fullnode+): new function.
	(ee-info-shortlink): new function.
	(find-einfo-links): rewritten.
	(ee-intro-stem): added comments, and deleted the copy of the
	`(defun ee-intro-stem ...)' that was in eev-tlinks.el.
	(find-eintro-links): new function.
	(find-eintro-or-einfo-links): new function.
	(ee-find-here-links0): small changes.

	* eev-mode.el (eev-mode-map-set): changed the binding of `M-h M-i'
	to `find-eintro-or-einfo-links'.